Fixed overflow issues on forum category listing.

--- a/assets/less/classes/forum/categories.less
+++ b/assets/less/classes/forum/categories.less
@@ -14,5 +14,6 @@
         display: flex;
         flex-direction: column;
         margin: 5px;
+        overflow: hidden;
     }
 }
