--- a/assets/less/classes/forum/category.less
+++ b/assets/less/classes/forum/category.less
@@ -170,6 +170,10 @@
             color: var(--accent-colour);
             text-decoration: none;
             pointer-events: initial;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 200px;
 
             &:hover {
                 text-decoration: underline;
@@ -178,6 +182,13 @@
             @media (max-width: @site-mobile-width) {
                 flex: 1 1 auto;
                 text-align: left;
+                max-width: 120px;
+            }
+        }
+
+        &__info {
+            @media (max-width: @site-mobile-width) {
+                width: 100%;
             }
         }
     }
